     [ALL]
        - Fix a crash when using gallery-dl
        - Add a menu in configure tab to install a short list of supported extensions.
        - Rearrage configure->general tab to make it friendly to translations.
        - Add a platform default theme and a light theme options.
        - Make it possible in the UI to choose between setting a browser name or setting a path to a cookie file.

     Version 5.3.2(Match 24th, 2025)
     [MAC]
        - Make gallery-dl work out of the box.
     [ALL]
        - BUG fix: Download progress on the title bar shows again when downloading from batch downloader tab.

     Version 5.3.3(May 21st, 2025)
     [ALL]
        - Playlist downloader tab now says why populating playlist was stopped when using "--break-on-existing".
        - Fix a bug on batch downloader tab that may lead to a crash when fetching metadata.

     Version 5.4.0(May 29th, 2025)
     [ALL]
        - Fix a bug introduced in 5.3.3 that causes entries in batch downloader tab to start downloading when added because of using a wrong config only option.
        - Add an "Extension" sub tab in configure tab to expose more config only options in "General" sub tab.

     Version 5.4.1(UNRELEASED)
     [Flatpak]
       - Make it possible to specifically call VLC to stream media(needs org.freedesktop.Flatpak permission).
     [WINDOWS]
       - Fix a bug caused by yt-dlp executable name change for 32 bit windows 7.
     [ALL]
       - Add Bulgarian translations.
       - Add ability to show thumbnails in batch downloader tab when using gallery-dl.
       - It is now possible to start downloading while the playlist tab is getting filled with entries.
       - It is now possible to do simultaneous downloading from all three tabs that can do downloading.
       - It is now possible to send multiple urls to VLC for streaming. This is useful for example
         when you want to stream a media that is made up of a video only stream and an audio only stream.